--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
       </section>
     </main>
     <footer>
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+      <p>By <a href="https://www.freecodecamp.org/learn/back-end-development-and-apis/back-end-development-and-apis-projects/url-shortener-microservice/">Eugene Crujido Jr</a></p>
     </footer>
   </body>
 </html>
