--- a/views/index.html
+++ b/views/index.html
@@ -19,11 +19,24 @@
           <fieldset>
             <legend>URL Shortener</legend>
             <label for="url_input">URL:</label>
-            <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
+            <input 
+              id="url_input"
+              type="text"
+              name="url"
+              placeholder="https://www.freecodecamp.org/" />
             <input type="submit" value="POST URL" />
           </fieldset>
         </form>
       </section>
+      <h2>Example Usage:</h2>
+      <a
+        href="https://url-shortener-microservice.freecodecamp.rocks/api/shorturl/3"
+      >
+        [this_project_url]/api/shorturl/3
+      </a>
+
+      <h3>Will Redirect to:</h3>
+      <p>https://forum.freecodecamp.org/</p>
     </main>
     <footer>
       <p>By <a href="https://www.freecodecamp.org/learn/back-end-development-and-apis/back-end-development-and-apis-projects/url-shortener-microservice/">Eugene Crujido Jr</a></p>
